# wezcmd

./: .gitignore  .mise.toml  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
scripts/: build-release.sh  release.sh
src/: actions.rs  client.rs  daemon.rs  main.rs  protocol.rs  proxy.rs
